Fix issue with display off screen on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -197,7 +197,6 @@ html {
   padding: 1.182em; /* 26px / ~ 120% */
   text-rendering: optimizeLegibility;
 }
-
 label {
   display: block;
 }
@@ -205,8 +204,7 @@ label {
 /* ===== LAYOUT STYLES ====== */
 #content  {
   margin: 0 auto; 
-  width: 95vw;
-  height: 95vh;
+  height: 90vh;
   overflow: hidden;
 }
 
